--- a/admin.html
+++ b/admin.html
@@ -8,21 +8,52 @@
 </head>
 <body>
 
-  <header class="navbar">
-    <div class="logo">KHOTWA COUNCIL</div>
-    <button id="darkToggle" class="dark-btn">🌙</button>
-  </header>
+  <!-- شاشة تسجيل الدخول -->
+  <div id="loginScreen" class="section">
+    <h2>🔒 Admin Login</h2>
+    <input type="password" id="adminPass" placeholder="Enter Admin Password" />
+    <button onclick="checkLogin()">Login</button>
+  </div>
 
-  <section class="section">
-    <h2>Admin Panel</h2>
-    <p>Only visible to administrators.</p>
-    <!-- لاحقاً يمكن ربط مزايا المشرف كعرض الرسائل -->
-  </section>
+  <!-- لوحة التحكم -->
+  <div id="adminPanel" style="display: none;">
+    <header class="navbar">
+      <div class="logo">KHOTWA ADMIN</div>
+      <button id="darkToggle" class="dark-btn">🌙</button>
+    </header>
 
-  <footer class="footer">&copy; 2025 KHOTWA Council</footer>
+    <main class="admin-panel">
+      <section class="card">
+        <h2>📝 Edit Content</h2>
+        <label>About Us:</label>
+        <textarea id="aboutText" rows="3"></textarea>
+        <button id="saveAbout">Save About</button>
 
-  <script src="script.js"></script>
+        <label>Contact Us:</label>
+        <textarea id="contactText" rows="2"></textarea>
+        <button id="saveContact">Save Contact</button>
+      </section>
+
+      <section class="card">
+        <h2>📅 Manage Events</h2>
+        <form id="newEventForm">
+          <input type="text" id="eventTitle" placeholder="Event Title" required />
+          <input type="date" id="eventDate" required />
+          <button type="submit">Add Event</button>
+        </form>
+        <ul id="eventsList" class="data-list"></ul>
+      </section>
+
+      <section class="card">
+        <h2>👨‍🎓 Registered Students</h2>
+        <ul id="registeredList" class="data-list"></ul>
+      </section>
+    </main>
+
+    <footer class="footer">&copy; 2025 KHOTWA Council</footer>
+  </div>
+
   <script src="dark-toggle.js"></script>
+  <script src="admin.js"></script>
 </body>
 </html>
-
