--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header class="navbar">
-    <div class="logo">KHOTWA COUNCIL</div>
+    <div class="logo"><a href = "index.html">KHOTWA COUNCIL</a></div>
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
