--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 <body>
 
   <header class="navbar">
-    <div class="logo">KHOTWA COUNCIL</div>
+    <div class="logo"><a href = "index.html">KHOTWA COUNCIL</a></div>
     <button id="darkToggle" class="dark-btn">🌙</button>
   </header>
 
