--- a/admin.html
+++ b/admin.html
@@ -18,7 +18,7 @@
   <!-- Admin Panel -->
   <div id="adminPanel" class="admin-panel-wrapper" style="display:none;">
     <header class="navbar">
-      <div class="logo">KHOTWA ADMIN</div>
+      <div class="logo"><a href = "index.html">KHOTWA COUNCIL</a></div>
       <button id="darkToggle" class="dark-btn">🌙</button>
     </header>
 
