--- a/admin.html
+++ b/admin.html
@@ -18,9 +18,13 @@
   <!-- Admin Panel -->
   <div id="adminPanel" class="admin-panel-wrapper" style="display:none;">
     <header class="navbar">
-      <div class="logo"><a href = "index.html">KHOTWA COUNCIL</a></div>
-      <button id="darkToggle" class="dark-btn">🌙</button>
-    </header>
+  <div class="logo">KHOTWA ADMIN</div>
+  <div class="navbar-actions">
+    <button id="darkToggle" class="dark-btn">🌙</button>
+    <button id="logoutBtn" class="logout-btn">Logout</button>
+  </div>
+</header>
+
 
     <main class="admin-panel">
       <section class="card card-content">
