--- a/register.html
+++ b/register.html
@@ -9,23 +9,22 @@
 <body>
 
   <header class="navbar">
-    <div class="logo"><a href = "index.html">KHOTWA COUNCIL</a></div>
+    <div class="logo">KHOTWA COUNCIL</div>
     <button id="darkToggle" class="dark-btn">🌙</button>
   </header>
 
   <section class="section">
     <h2>Student Registration</h2>
     <form id="registerForm">
-      <input type="text" placeholder="Full Name" required />
-      <input type="email" placeholder="Email" required />
-      <input type="password" placeholder="Password" required />
+      <input type="text" id="studentName" placeholder="Full Name" required />
+      <input type="email" id="studentEmail" placeholder="Email" required />
       <button type="submit">Register</button>
     </form>
   </section>
 
   <footer class="footer">&copy; 2025 KHOTWA Council</footer>
 
-  <script src="script.js"></script>
   <script src="dark-toggle.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
