--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#events">Events</a></li>
         <li><a href="#contact">Contact</a></li>
+         <li><a href="#admin">Admin</a></li>
       </ul>
     </nav>
     <button id="darkToggle" class="dark-btn">🌙</button>
