--- a/index.html
+++ b/index.html
@@ -53,9 +53,28 @@
     &copy; 2025 KHOTWA Student Council. All rights reserved.
   </footer>
 
-  <script src="dark-toggle.js"></script>
   <script>
     window.addEventListener("DOMContentLoaded", () => {
+      const themeLink = document.getElementById("theme-link");
+      const toggle = document.getElementById("darkToggle");
+
+      // تفعيل التيم من التخزين المحلي
+      const saved = localStorage.getItem("theme");
+      if (saved === "dark") {
+        themeLink.setAttribute("href", "dark.css");
+        toggle.textContent = "☀️";
+      } else {
+        themeLink.setAttribute("href", "styles.css");
+        toggle.textContent = "🌙";
+      }
+
+      toggle?.addEventListener("click", () => {
+        const isDark = themeLink.getAttribute("href") === "styles.css";
+        themeLink.setAttribute("href", isDark ? "dark.css" : "styles.css");
+        toggle.textContent = isDark ? "☀️" : "🌙";
+        localStorage.setItem("theme", isDark ? "dark" : "light");
+      });
+
       // تحميل محتوى الإدمن
       document.getElementById('aboutContent').textContent =
         localStorage.getItem('aboutText') || 'No content yet.';
@@ -76,7 +95,7 @@
           container.appendChild(li);
         });
 
-      // رسالة نجاح فورم
+      // إرسال الفورم
       document.getElementById('contactForm').addEventListener('submit', function (e) {
         e.preventDefault();
         alert('Thanks for reaching out! ✔️');
