--- a/register.html
+++ b/register.html
@@ -3,26 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Register – Khotwa Council</title>
+  <title>Register – KHOTWA</title>
   <link rel="stylesheet" href="styles.css" id="theme-link" />
 </head>
 <body>
-
   <header class="navbar">
     <div class="logo">KHOTWA COUNCIL</div>
     <button id="darkToggle" class="dark-btn">🌙</button>
   </header>
 
   <section class="section">
-    <h2>Student Registration</h2>
-    <form id="registerForm">
-      <input type="text" id="studentName" placeholder="Full Name" required />
-      <input type="email" id="studentEmail" placeholder="Email" required />
+    <h2>📝 Student Registration</h2>
+    <form id="regForm">
+      <input type="text" id="name" placeholder="Your Name" required />
+      <input type="email" id="email" placeholder="Your Email" required />
+      <input type="text" id="major" placeholder="Your Major" required />
+      <select id="level" required>
+        <option value="">Select Your Level</option>
+        <option value="1st Year">1st Year</option>
+        <option value="2nd Year">2nd Year</option>
+        <option value="3rd Year">3rd Year</option>
+        <option value="4th Year">4th Year</option>
+      </select>
       <button type="submit">Register</button>
     </form>
   </section>
 
-  <footer class="footer">&copy; 2025 KHOTWA Council</footer>
+  <footer class="footer">
+    &copy; 2025 KHOTWA Student Council.
+  </footer>
 
   <script src="dark-toggle.js"></script>
   <script src="script.js"></script>
