--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <header class="navbar">
     <div class="logo">KHOTWA COUNCIL</div>
     <nav>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#events">Events</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="admin.html">Admin</a></li>
-      </ul>
+    <ul class="nav-links">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#events">Events</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="calendar.html">Calendar</a></li>
+  <li><a href="register.html">Register</a></li>
+  <li><a href="admin.html">Admin</a></li>
+</ul>
+
     </nav>
     <button id="darkToggle" class="dark-btn">🌙</button>
   </header>
