--- a/calendar.html
+++ b/calendar.html
@@ -9,21 +9,44 @@
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
 
-  <!-- تنسيق بسيط -->
+  <!-- ستايل بسيط للهيدر + التقويم -->
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f9f9f9;
+      background: #f4f4f4;
     }
 
-    header {
-      background: black;
+    .navbar {
+      background-color: #000;
       color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       padding: 1rem 2rem;
-      font-size: 1.3rem;
+    }
+
+    .logo {
       font-weight: bold;
+      font-size: 1.4rem;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 1.2rem;
+      padding: 0;
+      margin: 0;
+    }
+
+    .nav-links li a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .nav-links li a:hover {
+      color: #00703c;
     }
 
     #calendar {
@@ -34,16 +57,22 @@
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-
-    .fc-event-title {
-      font-weight: bold;
-    }
   </style>
 </head>
 <body>
 
-  <header>📅 KHOTWA Event Calendar</header>
+  <!-- الهيدر -->
+  <header class="navbar">
+    <div class="logo">KHOTWA COUNCIL</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="calendar.html">Calendar</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="admin.html">Admin</a></li>
+    </ul>
+  </header>
 
+  <!-- تقويم الأحداث -->
   <div id="calendar"></div>
 
   <script>
