--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 </head>
 <body>
 
-  <header class="navbar">
-    <div class="logo">KHOTWA COUNCIL</div>
-    <nav>
-    <ul class="nav-links">
-  <li><a href="#home">Home</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#events">Events</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="calendar.html">Calendar</a></li>
-  <li><a href="register.html">Register</a></li>
-  <li><a href="admin.html">Admin</a></li>
-</ul>
+ <header class="navbar">
+  <div class="logo">KHOTWA COUNCIL</div>
 
-    </nav>
+  <nav class="nav-container">
+    <ul class="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#events">Events</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="calendar.html">Calendar</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="admin.html">Admin</a></li>
+    </ul>
     <button id="darkToggle" class="dark-btn">🌙</button>
-  </header>
+  </nav>
+</header>
 
   <section id="home" class="hero">
     <h1>Welcome to the Khotwa Student Council</h1>
