--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
   </nav>
 </header>
 
-  <section id="home" class="hero">
-    <h1>Welcome to the Khotwa Student Council</h1>
+<section id="home" class="hero">
+  <div class="hero-content">
+    <h1>Welcome to KHOTWA Student Council</h1>
     <p>Empowering students, one step at a time.</p>
-    <a href="#about" class="btn">Learn More</a>
-  </section>
+    <a href="register.html" class="btn primary-btn">Join the Council</a>
+  </div>
+</section>
+  
 
   <section id="about" class="section">
     <h2>About Us</h2>
