--- a/index.html
+++ b/index.html
@@ -34,10 +34,18 @@
 </section>
   
 
-  <section id="about" class="section">
-    <h2>About Us</h2>
-    <p id="aboutContent">Loading...</p>
-  </section>
+ <section id="about" class="section about-section">
+  <div class="about-container">
+    <div class="about-text">
+      <h2>📌 Who We Are</h2>
+      <p id="aboutContent">Loading...</p>
+    </div>
+    <div class="about-image">
+      <img src="https://via.placeholder.com/400x250?text=Khotwa+Team" alt="Khotwa Team Photo" />
+    </div>
+  </div>
+</section>
+
 
   <section id="events" class="section">
     <h2>Upcoming Events</h2>
