--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p id="aboutContent">Loading...</p>
     </div>
     <div class="about-image">
-      <img src="https://via.placeholder.com/400x250?text=Khotwa+Team" alt="Khotwa Team Photo" />
+      <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Khotwa Team Photo" />
     </div>
   </div>
 </section>
