--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Khotwa Student Council</title>
-  <link rel="stylesheet" href="styles.css" id="theme-link" />
+  <link rel="stylesheet" href="styles.css" id="theme-link">
 </head>
 <body>
+
   <header class="navbar">
     <div class="logo">KHOTWA COUNCIL</div>
     <nav class="nav-container">
@@ -43,6 +44,7 @@
     </div>
   </section>
 
+  <!-- باقي الأقسام كما هي... -->
   <section id="events" class="section">
     <h2>📅 Upcoming Events</h2>
     <ul id="eventsContainer" class="event-cards"></ul>
@@ -52,8 +54,8 @@
     <h2>Contact Us</h2>
     <p id="contactContent">Loading...</p>
     <form id="contactForm">
-      <input type="text" placeholder="Your Name" required/>
-      <input type="email" placeholder="Your Email" required/>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
       <textarea placeholder="Your Message" required></textarea>
       <button type="submit">Send</button>
     </form>
@@ -63,19 +65,23 @@
     &copy; 2025 KHOTWA Student Council. All rights reserved.
   </footer>
 
-  <script src="dark-toggle.js"></script>
   <script>
     window.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-link");
       const toggle = document.getElementById("darkToggle");
       const saved = localStorage.getItem("theme") || "light";
-      themeLink.setAttribute("href", saved === "dark" ? "dark.css" : "styles.css");
-      toggle.textContent = saved === "dark" ? "☀️" : "🌙";
+
+      function applyTheme(mode) {
+        themeLink.setAttribute("href", mode === "dark" ? "dark.css" : "styles.css");
+        toggle.textContent = mode === "dark" ? "☀️" : "🌙";
+      }
+
+      applyTheme(saved);
+
       toggle.addEventListener("click", () => {
-        const isDark = themeLink.getAttribute("href") === "styles.css";
-        themeLink.setAttribute("href", isDark ? "dark.css" : "styles.css");
-        toggle.textContent = isDark ? "☀️" : "🌙";
-        localStorage.setItem("theme", isDark ? "dark" : "light");
+        const newMode = (themeLink.getAttribute("href") === "styles.css") ? "dark" : "light";
+        localStorage.setItem("theme", newMode);
+        applyTheme(newMode);
       });
 
       document.getElementById('aboutContent').textContent =
@@ -85,23 +91,21 @@
 
       const events = JSON.parse(localStorage.getItem('events') || '[]');
       const container = document.getElementById('eventsContainer');
-      events.sort((a,b)=>new Date(a.date)-new Date(b.date)).forEach(ev => {
+      container.innerHTML = '';
+      events.sort((a,b) => new Date(a.date) - new Date(b.date)).forEach(ev => {
         const li = document.createElement('li');
         li.innerHTML = `
           <div class="card-event">
             ${ev.image ? `<img src="${ev.image}" alt="Event">` : ''}
-            <div>
-              <h3>${ev.title}</h3>
-              <p>${ev.date}</p>
-            </div>
+            <div><h3>${ev.title}</h3><p>${ev.date}</p></div>
           </div>`;
         container.appendChild(li);
       });
 
-      document.getElementById('contactForm').addEventListener('submit', e => {
+      document.getElementById('contactForm').addEventListener('submit', function(e) {
         e.preventDefault();
         alert('Thanks for reaching out! ✔️');
-        e.target.reset();
+        this.reset();
       });
     });
   </script>
