--- a/calendar.html
+++ b/calendar.html
@@ -4,96 +4,55 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Events Calendar – KHOTWA</title>
-
-  <!-- FullCalendar CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
-
-  <!-- ستايل بسيط للهيدر + التقويم -->
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      background: #f4f4f4;
-    }
-
-    .navbar {
-      background-color: #000;
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-    }
-
-    .logo {
-      font-weight: bold;
-      font-size: 1.4rem;
-    }
-
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 1.2rem;
-      padding: 0;
-      margin: 0;
-    }
-
-    .nav-links li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .nav-links li a:hover {
-      color: #00703c;
-    }
-
-    #calendar {
-      max-width: 900px;
-      margin: 2rem auto;
-      background: white;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" id="theme-link" />
 </head>
 <body>
 
-  <!-- الهيدر -->
   <header class="navbar">
     <div class="logo">KHOTWA COUNCIL</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="calendar.html">Calendar</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="admin.html">Admin</a></li>
-    </ul>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="index.html#events">Events</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="admin.html">Admin</a></li>
+      </ul>
+    </nav>
+    <button id="darkToggle" class="dark-btn">🌙</button>
   </header>
 
-  <!-- تقويم الأحداث -->
-  <div id="calendar"></div>
+  <section class="section">
+    <h2>📅 All Upcoming Events</h2>
+    <ul id="calendarList" class="event-cards"></ul>
+  </section>
 
+  <footer class="footer">
+    &copy; 2025 KHOTWA Student Council. All rights reserved.
+  </footer>
+
+  <script src="dark-toggle.js"></script>
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const savedEvents = JSON.parse(localStorage.getItem("events") || "[]");
-      const events = savedEvents.map(ev => ({
-        title: ev.title,
-        start: ev.date,
-        backgroundColor: "#d41c0f",
-        borderColor: "#d41c0f"
-      }));
+    window.addEventListener("DOMContentLoaded", () => {
+      const container = document.getElementById("calendarList");
+      const events = JSON.parse(localStorage.getItem("events") || "[]");
 
-      const calendarEl = document.getElementById("calendar");
-      const calendar = new FullCalendar.Calendar(calendarEl, {
-        initialView: "dayGridMonth",
-        events: events,
-        height: "auto"
-      });
-      calendar.render();
+      events
+        .sort((a, b) => new Date(a.date) - new Date(b.date))
+        .forEach(event => {
+          const li = document.createElement("li");
+          li.className = "card-event";
+          li.innerHTML = `
+            ${event.image ? `<img src="${event.image}" alt="Event" />` : ""}
+            <div>
+              <h3>${event.title}</h3>
+              <p>${event.date}</p>
+            </div>
+          `;
+          container.appendChild(li);
+        });
     });
   </script>
-
 </body>
 </html>
