--- a/calendar.html
+++ b/calendar.html
@@ -5,54 +5,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Events Calendar – KHOTWA</title>
   <link rel="stylesheet" href="styles.css" id="theme-link" />
+
+  <!-- FullCalendar -->
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+
+  <style>
+    #calendar {
+      max-width: 900px;
+      margin: 2rem auto;
+      background-color: var(--bg-light);
+      color: var(--text-light);
+      border-radius: 8px;
+      padding: 1rem;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    [data-theme="dark"] #calendar {
+      background-color: #2a2a2a;
+      color: var(--text-dark);
+    }
+  </style>
 </head>
 <body>
 
-  <header class="navbar">
-    <div class="logo">KHOTWA COUNCIL</div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="index.html#home">Home</a></li>
-        <li><a href="index.html#about">About</a></li>
-        <li><a href="index.html#events">Events</a></li>
-        <li><a href="index.html#contact">Contact</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="admin.html">Admin</a></li>
-      </ul>
-    </nav>
+<header class="navbar">
+  <div class="logo">KHOTWA COUNCIL</div>
+  <nav class="nav-container">
+    <ul class="nav-links">
+      <li><a href="index.html#home">Home</a></li>
+      <li><a href="index.html#about">About</a></li>
+      <li><a href="index.html#events">Events</a></li>
+      <li><a href="index.html#contact">Contact</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="admin.html">Admin</a></li>
+    </ul>
     <button id="darkToggle" class="dark-btn">🌙</button>
-  </header>
+  </nav>
+</header>
 
-  <section class="section">
-    <h2>📅 All Upcoming Events</h2>
-    <ul id="calendarList" class="event-cards"></ul>
-  </section>
+<section class="section">
+  <h2>📅 Event Calendar</h2>
+  <div id="calendar"></div>
+</section>
 
-  <footer class="footer">
-    &copy; 2025 KHOTWA Student Council. All rights reserved.
-  </footer>
+<footer class="footer">
+  &copy; 2025 KHOTWA Student Council
+</footer>
 
-  <script src="dark-toggle.js"></script>
-  <script>
-    window.addEventListener("DOMContentLoaded", () => {
-      const container = document.getElementById("calendarList");
-      const events = JSON.parse(localStorage.getItem("events") || "[]");
-
-      events
-        .sort((a, b) => new Date(a.date) - new Date(b.date))
-        .forEach(event => {
-          const li = document.createElement("li");
-          li.className = "card-event";
-          li.innerHTML = `
-            ${event.image ? `<img src="${event.image}" alt="Event" />` : ""}
-            <div>
-              <h3>${event.title}</h3>
-              <p>${event.date}</p>
-            </div>
-          `;
-          container.appendChild(li);
-        });
+<script src="dark-toggle.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    // Dark mode handling
+    const themeLink = document.getElementById("theme-link");
+    const toggle = document.getElementById("darkToggle");
+    const saved = localStorage.getItem("theme") || "light";
+    document.documentElement.setAttribute("data-theme", saved);
+    themeLink.setAttribute("href", saved === "dark" ? "dark.css" : "styles.css");
+    toggle.textContent = saved === "dark" ? "☀️" : "🌙";
+    toggle.addEventListener("click", () => {
+      const newTheme = saved === "dark" ? "light" : "dark";
+      localStorage.setItem("theme", newTheme);
+      window.location.reload();
     });
-  </script>
+
+    // Load events from localStorage
+    const events = JSON.parse(localStorage.getItem("events") || "[]");
+    const fcEvents = events.map(ev => ({
+      title: ev.title,
+      start: ev.date,
+    }));
+
+    const calendarEl = document.getElementById("calendar");
+    const calendar = new FullCalendar.Calendar(calendarEl, {
+      initialView: "dayGridMonth",
+      height: "auto",
+      events: fcEvents,
+      eventClick: info => {
+        alert(`${info.event.title}\nDate: ${info.event.start.toISOString().split('T')[0]}`);
+      }
+    });
+    calendar.render();
+  });
+</script>
 </body>
 </html>
