--- a/register.html
+++ b/register.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css" id="theme-link" />
 </head>
 <body>
-
   <header class="navbar">
     <div class="logo">KHOTWA COUNCIL</div>
     <nav class="nav-container">
@@ -25,26 +24,24 @@
   </header>
 
   <section class="section">
-    <div class="form-wrapper">
-      <h2>📝 Student Registration</h2>
-      <form id="regForm">
-        <input type="text" id="name" placeholder="Your Name" required />
-        <input type="email" id="email" placeholder="Your Email" required />
-        <input type="text" id="major" placeholder="Your Major" required />
-        <select id="level" required>
-          <option value="">Select Your Level</option>
-          <option value="1st Year">1st Year</option>
-          <option value="2nd Year">2nd Year</option>
-          <option value="3rd Year">3rd Year</option>
-          <option value="4th Year">4th Year</option>
-        </select>
-        <button type="submit">Register</button>
-      </form>
-    </div>
+    <h2>📝 Student Registration</h2>
+    <form id="regForm">
+      <input type="text" id="name" placeholder="Your Name" required />
+      <input type="email" id="email" placeholder="Your Email" required />
+      <input type="text" id="major" placeholder="Your Major" required />
+      <select id="level" required>
+        <option value="">Select Your Level</option>
+        <option value="1st Year">1st Year</option>
+        <option value="2nd Year">2nd Year</option>
+        <option value="3rd Year">3rd Year</option>
+        <option value="4th Year">4th Year</option>
+      </select>
+      <button type="submit">Register</button>
+    </form>
   </section>
 
   <footer class="footer">
-    &copy; 2025 KHOTWA Student Council. All rights reserved.
+    &copy; 2025 KHOTWA Student Council.
   </footer>
 
   <script src="dark-toggle.js"></script>
