--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <!-- تحميل الثيم مبكراً -->
-  <script>
-    document.documentElement.setAttribute("data-theme", localStorage.getItem("theme") || "light");
-  </script>
   <title>Khotwa Student Council</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
   <header class="navbar">
     <div class="logo">KHOTWA COUNCIL</div>
     <nav class="nav-container">
@@ -36,14 +33,12 @@
   </section>
 
   <section id="about" class="about-section">
-    <div class="about-container">
-      <div class="about-text">
-        <h2>Who We Are</h2>
-        <p id="aboutContent">Loading...</p>
-      </div>
-      <div class="about-image">
-        <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Khotwa Team Photo">
-      </div>
+    <div class="about-text">
+      <h2>Who We Are</h2>
+      <p id="aboutContent">Loading...</p>
+    </div>
+    <div class="about-image">
+      <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Khotwa Team Photo" />
     </div>
   </section>
 
@@ -56,14 +51,16 @@
     <h2>Contact Us</h2>
     <p id="contactContent">Loading...</p>
     <form id="contactForm">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
       <textarea placeholder="Your Message" required></textarea>
       <button type="submit">Send</button>
     </form>
   </section>
 
-  <footer class="footer">&copy; 2025 KHOTWA Student Council</footer>
+  <footer class="footer">
+    &copy; 2025 KHOTWA Student Council. All rights reserved.
+  </footer>
 
   <script src="dark-toggle.js"></script>
   <script>
@@ -71,21 +68,25 @@
       document.getElementById('aboutContent').textContent = localStorage.getItem('aboutText') || 'No content yet.';
       document.getElementById('contactContent').textContent = localStorage.getItem('contactText') || 'Feel free to reach us.';
 
-      const events = JSON.parse(localStorage.getItem('events')||'[]');
+      const events = JSON.parse(localStorage.getItem('events') || '[]');
       const container = document.getElementById('eventsContainer');
-      container.innerHTML = '';
-      events.sort((a,b)=>new Date(a.date)-new Date(b.date)).forEach(ev => {
+      events.sort((a, b) => new Date(a.date) - new Date(b.date)).forEach(ev => {
         const li = document.createElement('li');
-        li.innerHTML = `<div class="card-event">${ev.image?`<img src="${ev.image}" alt="Event">`:``}
-          <div><h3>${ev.title}</h3><p>${ev.date}</p></div>
-        </div>`;
+        li.innerHTML = `
+          <div class="card-event">
+            ${ev.image ? `<img src="${ev.image}" alt="Event Image" />` : ''}
+            <div>
+              <h3>${ev.title}</h3>
+              <p>${ev.date}</p>
+            </div>
+          </div>`;
         container.appendChild(li);
       });
 
-      document.getElementById('contactForm').addEventListener('submit', e=>{
+      document.getElementById('contactForm').addEventListener('submit', function (e) {
         e.preventDefault();
         alert('Thanks for reaching out! ✔️');
-        e.target.reset();
+        this.reset();
       });
     });
   </script>
