--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Khotwa Student Council</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
+  <!-- Navbar -->
   <header class="navbar">
     <div class="logo">KHOTWA COUNCIL</div>
     <nav class="nav-container">
@@ -20,37 +21,51 @@
         <li><a href="register.html">Register</a></li>
         <li><a href="admin.html">Admin</a></li>
       </ul>
-      <button id="darkToggle" class="dark-btn">🌙</button>
+      <button id="darkToggle" class="dark-btn">🌓</button>
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="hero-content">
-      <h1>Welcome to KHOTWA Student Council</h1>
-      <p>Empowering students, one step at a time.</p>
+      <h1>Welcome to Khotwa Student Council</h1>
+      <p>Empowering student voice. Leading with impact.</p>
       <a href="#about" class="primary-btn">Learn More</a>
     </div>
   </section>
 
-  <section id="about" class="about-section">
+  <!-- About Section -->
+  <section id="about" class="section about-section">
     <div class="about-text">
-      <h2>Who We Are</h2>
-      <p id="aboutContent">Loading...</p>
+      <h2>About Khotwa</h2>
+      <p>Khotwa is a student council that aims to bridge the gap between students and the administration, ensuring every voice is heard.</p>
     </div>
     <div class="about-image">
-      <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Khotwa Team Photo" />
+      <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Khotwa Team" />
     </div>
   </section>
 
+  <!-- Events Section -->
   <section id="events" class="section">
     <h2>Upcoming Events</h2>
-    <ul id="eventsContainer" class="event-cards"></ul>
+    <ul class="event-cards">
+      <li class="card-event">
+        <img src="images/event1.jpg" alt="Event 1" />
+        <h3>Orientation Week</h3>
+        <p>Join us in welcoming new students!</p>
+      </li>
+      <li class="card-event">
+        <img src="images/event2.jpg" alt="Event 2" />
+        <h3>Tech Talk</h3>
+        <p>Discussion on AI, Web & Innovation.</p>
+      </li>
+    </ul>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact" class="section">
     <h2>Contact Us</h2>
-    <p id="contactContent">Loading...</p>
-    <form id="contactForm">
+    <form>
       <input type="text" placeholder="Your Name" required />
       <input type="email" placeholder="Your Email" required />
       <textarea placeholder="Your Message" required></textarea>
@@ -58,37 +73,11 @@
     </form>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
-    &copy; 2025 KHOTWA Student Council. All rights reserved.
+    <p>© 2025 Khotwa Student Council. All rights reserved.</p>
   </footer>
 
   <script src="dark-toggle.js"></script>
-  <script>
-    window.addEventListener("DOMContentLoaded", () => {
-      document.getElementById('aboutContent').textContent = localStorage.getItem('aboutText') || 'No content yet.';
-      document.getElementById('contactContent').textContent = localStorage.getItem('contactText') || 'Feel free to reach us.';
-
-      const events = JSON.parse(localStorage.getItem('events') || '[]');
-      const container = document.getElementById('eventsContainer');
-      events.sort((a, b) => new Date(a.date) - new Date(b.date)).forEach(ev => {
-        const li = document.createElement('li');
-        li.innerHTML = `
-          <div class="card-event">
-            ${ev.image ? `<img src="${ev.image}" alt="Event Image" />` : ''}
-            <div>
-              <h3>${ev.title}</h3>
-              <p>${ev.date}</p>
-            </div>
-          </div>`;
-        container.appendChild(li);
-      });
-
-      document.getElementById('contactForm').addEventListener('submit', function (e) {
-        e.preventDefault();
-        alert('Thanks for reaching out! ✔️');
-        this.reset();
-      });
-    });
-  </script>
 </body>
 </html>
